scenarios/waypoint/woof-app/woof-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woof-v1
  namespace: woof
spec:
  replicas: 1
  selector:
    matchLabels:
      app: woof-service
      version: v1
  template:
    metadata:
      labels:
        app: woof-service
        version: v1
    spec:
      containers:
        - name: woof
          image: akshaysood112/woof
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
            requests:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woof-v2
  namespace: woof
spec:
  replicas: 1
  selector:
    matchLabels:
      app: woof-service
      version: v2
  template:
    metadata:
      labels:
        app: woof-service
        version: v2
    spec:
      containers:
        - name: woof
          image: akshaysood112/woof
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
            requests:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
