scenarios/waypoint/woof-app/woof-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woof-service  
  namespace: woof
spec:
  selector:
    app: woof-service
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: woof-service-v1
  namespace: woof
spec:
  selector:
    app: woof-service
    version: v1
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: woof-service-v2
  namespace: woof
spec:
  selector:
    app: woof-service
    version: v2
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  type: ClusterIP
---
