scenarios/waypoint/woof-app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woof-route
  namespace: woof
spec:
  parentRefs:
  - kind: Service 
    group: ""
    name: woof-service
    port: 80
  rules:
  - backendRefs:
    - name: woof-service-v1
      port: 80
